--- a/dockerfiles/develop-env/ubuntu/debug/Dockerfile
+++ b/dockerfiles/develop-env/ubuntu/debug/Dockerfile
@@ -29,12 +29,15 @@ deb http://cn.archive.ubuntu.com/ubuntu mantic-security main restricted\n\
 deb http://cn.archive.ubuntu.com/ubuntu mantic-security universe\n\
 deb http://cn.archive.ubuntu.com/ubuntu mantic-security multiverse' > /etc/apt/sources.list
 
-RUN apt update -y && apt upgrade -y
-RUN DEBIAN_FRONTEND=noninteractive TZ=Asia/Shanghai apt -y install tzdata
-RUN apt install -y net-tools telnet sysstat bridge-utils bash-completion vim jq tar openssl iputils-ping lsof lvm2 \
+RUN apt update -y && apt upgrade -y && \
+    DEBIAN_FRONTEND=noninteractive TZ=Asia/Shanghai apt -y install tzdata && \
+    apt install -y man-db manpages-posix && apt install -y manpages-dev manpages-posix-dev && yes | unminimize && \
+    apt install -y net-tools telnet sysstat bridge-utils bash-completion vim jq tar openssl iputils-ping lsof lvm2 \
     dnsutils curl gcc g++ automake autoconf make tree stress htop atop sysbench ipvsadm ipset conntrack ufw git \
     build-essential flex libncurses-dev bison libelf-dev libssl-dev bc openssh-server ansible unzip binutils \
     libc-ares-dev libtool pkg-config libsystemd-dev file texinfo nmap zsh autojump byobu
+
+RUN apt install -y language-pack-zh-hans
 
 #  同步时间
 RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
@@ -67,10 +70,12 @@ RUN git config --global url."https://hub.fgit.cf".insteadof "https://github.com"
 RUN echo Y | sh -c "$(curl -fsSL https://raw.gitmirror.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" && \
     # 安装powerlevel10k主题
     # git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k && \
-    # 安装历史命令提示插件
+    # 安装历史命令提示插件 参考地址：https://github.com/zsh-users/zsh-autosuggestions
     git clone --depth=1 https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions && \
-    # 安装命令行语法高亮插件
-    git clone --depth=1 https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting && \
+    # 安装命令行语法高亮插件 参考地址：https://github.com/zsh-users/zsh-syntax-highlighting.git
+    git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting && \
+    # 下载自动补全 参考链接：https://github.com/zsh-users/zsh-completions
+    git clone https://github.com/zsh-users/zsh-completions ${ZSH_CUSTOM:-${ZSH:-~/.oh-my-zsh}/custom}/plugins/zsh-completions && \
     # 下载字体
     # curl -SLO https://raw.gitmirror.com/powerline/powerline/develop/font/10-powerline-symbols.conf && \
     # curl -SLO https://raw.gitmirror.com/powerline/powerline/develop/font/PowerlineSymbols.otf && \
@@ -87,7 +92,9 @@ RUN echo Y | sh -c "$(curl -fsSL https://raw.gitmirror.com/ohmyzsh/ohmyzsh/maste
     # 在命令执行过程中，使用小红点进行提示
     sed -i 's@#COMPLETION_WAITING_DOTS.*@COMPLETION_WAITING_DOTS="true"@g' ~/.zshrc && \
     # 启用安装的插件
-    sed -i 's@^plugins.*@plugins=(extract autojump zsh-autosuggestions zsh-syntax-highlighting)@g'  ~/.zshrc
+    sed -i 's@^plugins.*@plugins=(autojump zsh-autosuggestions zsh-syntax-highlighting kind kubectl kube-ps1 kubectx docker history man nmap rsync z systemd colorize colored-man-pages command-not-found golang)@g'  ~/.zshrc && \
+    # 开启zsh自动补全
+    num=$(awk '/^source/{print NR}' .zshrc|head -n 1) && sed -i "${num}i fpath+=${ZSH_CUSTOM:-${ZSH:-~/.oh-my-zsh}/custom}/plugins/zsh-completions/src" ~/.zshrc
 
 
 # 开启SSHD服务, 错误的构建方式，镜像在构建过程中不应该启动sshd服务，应该在镜像的启动点启动sshd服务 (当然，如果使用Systemd作为一号进程，那么ssh服务自然会被启动)
@@ -100,7 +107,7 @@ RUN sed -i 's/#Port 22/Port 22/g' /etc/ssh/sshd_config && \
 
 
 # vscode 不然vscode安装好之后，老是找不到命令
-RUN cat <<EOF >> ~/.bashrc
+RUN cat <<EOF >> ~/.zshrc
 
 # 添加vscode可执行文件环境变量配置，否则有可能找不到vscode可执行文件
 if [ -d ~/.vscode-server ];then
@@ -108,33 +115,6 @@ if [ -d ~/.vscode-server ];then
     export PATH=\${HOME}/.vscode-server/bin/\${code_latest_version}/bin/remote-cli:\$PATH
 fi
 EOF
-
-# zsh配置参考链接：https://github.com/skywind3000/vim/blob/master/etc/zshrc.zsh
-# 安装ohmyzsh（使用raw.gitmirror.com加速raw.githubusercontent.com）
-RUN echo Y | sh -c "$(curl -fsSL https://raw.gitmirror.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" && \
-    # 安装powerlevel10k主题
-    # git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k && \
-    # 安装历史命令提示插件
-    git clone --depth=1 https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions && \
-    # 安装命令行语法高亮插件
-    git clone --depth=1 https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting && \
-    # 下载字体
-    # curl -SLO https://raw.gitmirror.com/powerline/powerline/develop/font/10-powerline-symbols.conf && \
-    # curl -SLO https://raw.gitmirror.com/powerline/powerline/develop/font/PowerlineSymbols.otf && \
-    # sudo mkdir /usr/share/fonts/OTF && \
-    # sudo cp 10-powerline-symbols.conf /usr/share/fonts/OTF/  && \
-    # sudo mv 10-powerline-symbols.conf /etc/fonts/conf.d/ && \
-    # sudo mv PowerlineSymbols.otf /usr/share/fonts/OTF/ && \
-    # fc-cache -vf  /usr/share/fonts/OTF/   && \
-    # 设置默认主题为powerlevel10k
-    # sed -i 's@^ZSH_THEME.*@ZSH_THEME="powerlevel10k/powerlevel10k"@g' ~/.zshrc && \
-    sed -i 's@^ZSH_THEME.*@ZSH_THEME="dst"@g' ~/.zshrc && \
-    # 开启错误命令自动更正
-    sed -i 's@#ENABLE_CORRECTION.*@ENABLE_CORRECTION="true"@g' ~/.zshrc && \
-    # 在命令执行过程中，使用小红点进行提示
-    sed -i 's@#COMPLETION_WAITING_DOTS.*@COMPLETION_WAITING_DOTS="true"@g' ~/.zshrc && \
-    # 启用安装的插件
-    sed -i 's@^plugins.*@plugins=(extract autojump zsh-autosuggestions zsh-syntax-highlighting)@g'  ~/.zshrc
 
 # 测试不同功能
 
@@ -152,6 +132,7 @@ RUN versions='3.27.6' && \
 # 参考连接：https://blog.csdn.net/Aidam_Bo/article/details/117568034
 RUN git clone -b v1.58.1 https://github.com/grpc/grpc.git && cd grpc && git branch && git submodule update --init && \
     mkdir -p cmake/build && cd cmake/build && cmake ../.. && make -j$(nproc) && make install && cd /root && rm -rf grpc
+
 
 
 # 切换脚本解释器为bash, Ubuntu默认的脚本解释器为dash
